--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "normalize-url": "^5.3.0",
+    "react-modal": "^3.11.2",
     "react-split-pane": "^0.1.92",
     "react-toastify": "^9.0.7",
     "roughjs": "^4.5.2",
