--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@mui/x-date-pickers": "^5.0.3",
     "bootstrap": "^5.2.0",
+    "date-fns": "^2.29.3",
     "prop-types": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
